--- a/App.Release.config
+++ b/App.Release.config
@@ -4,5 +4,9 @@
   <connectionStrings>
     <add name="SSFEntities" connectionString="metadata=res://*/SSFEntities.csdl|res://*/SSFEntities.ssdl|res://*/SSFEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=54.172.245.215;initial catalog=SSF;persist security info=True;user id=sa;password=x^682!+9F.Y7!2u;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     <add name="SSFDB" connectionString="server=54.172.245.215;database=SSF;user id=sa;password=x^682!+9F.Y7!2u;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+    <add name="BBHDB" connectionString="server=54.172.245.215;database=BuzzBuzzHome;user id=sa;password=x^682!+9F.Y7!2u;" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
   </connectionStrings>
+  <appSettings>
+    <add key="ssfDBName" value="SSF" xdt:Transform="Replace"  xdt:Locator="Match(key)"/>
+  </appSettings>
 </configuration>
