Updates to log filename and gitignore

--- a/App.config
+++ b/App.config
@@ -7,6 +7,10 @@
     <add name="SSFEntities" connectionString="metadata=res://*/SSFEntities.csdl|res://*/SSFEntities.ssdl|res://*/SSFEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=52.55.241.158;initial catalog=qa.SSF;persist security info=True;user id=sa;password=buZ2SQL@dm1n;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="SSFDB" connectionString="server=52.55.241.158;database=qa.SSF;user id=sa;password=buZ2SQL@dm1n;" />
     <add name="BBHDB" connectionString="server=52.55.241.158;database=qa.BuzzBuzzHome.com;user id=sa;password=buZ2SQL@dm1n;" />
+    
+    
+    <!--<add name="SSFDB" connectionString="server=54.172.245.215;database=SSF;user id=sa;password=x^682!+9F.Y7!2u;" />
+    <add name="BBHDB" connectionString="server=54.172.245.215;database=BuzzBuzzHome;user id=sa;password=x^682!+9F.Y7!2u;" />-->
   </connectionStrings>
   <appSettings>
     <add key="DOWNLOAD_BATCH_SIZE" value="1000" />
